[package]
name = "all-is-cubes-base"
version = "0.10.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Helper library for all-is-cubes. Do not use directly."
repository.workspace = true
license = "MIT OR Apache-2.0"
categories = [] # not for general use
keywords = ["all-is-cubes"] # but we'll at least label it as being part of the family

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[features]
std = [
    "bevy_platform/std", # selects use of blocking locks instead of spinlocks
    "euclid/std",
]
# Adds `impl arbitrary::Arbitrary for ...`
arbitrary = [
    "std", # TODO: remove this when <https://github.com/rust-fuzz/arbitrary/issues/208> is fixed
    "dep:arbitrary",
    "euclid/arbitrary",
    "ordered-float/arbitrary"
]
rerun = ["dep:re_sdk_types"]
serde = [
    "dep:serde",
    "dep:serde_core",
    "ordered-float/serde",
]
_special_testing = []

[dependencies]
arbitrary = { workspace = true, optional = true, public = true }
bevy_platform = { workspace = true, features = ["alloc"] }
bytemuck = { workspace = true, features = ["derive"] }
displaydoc = { workspace = true }
embedded-graphics-core = { workspace = true, public = true }
# libm feature to guarantee compilability and compatibility with no_std
euclid = { workspace = true, public = true, features = ["libm"] }
exhaust = { workspace = true, default-features = false }
futures-core = { workspace = true }
libm = { workspace = true }
log = { workspace = true, public = true }
manyfmt = { workspace = true, public = true }
mutants = { workspace = true }
num-traits = { workspace = true, public = true }
ordered-float = { workspace = true, public = true }
rand = { workspace = true, public = true }
re_sdk_types = { workspace = true, optional = true, public = true }
serde = { workspace = true, optional = true, public = true, features = ["derive"] }
# dummy dependency for exported_private_dependencies false positive
serde_core = { workspace = true, optional = true, public = true }

[dev-dependencies]
indoc = { workspace = true }
itertools = { workspace = true }
pretty_assertions = { workspace = true }
rand_xoshiro = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
