[package]
name = "all-is-cubes-client"
version = "0.1.0"
authors = ["Kevin Reid <kpreid@switchb.org>"]
edition = "2018"
description = "Web client for the recursive voxel game All is Cubes."
readme = "../README.md"
# TODO: add homepage = "..." when we have one
repository = "https://github.com/kpreid/all-is-cubes"
license = "MIT"
# TODO: revisit categories once it's more settled how useful this is as an engine
categories = ["games", "wasm"]
publish = false # guard against accidents until things are stable

[lib]
crate-type = ["cdylib"]

[dependencies]
all-is-cubes = { path = "../all-is-cubes" }
cgmath = "0.17.0"
console_error_panic_hook = "0.1.5"
js-sys = "0.3.44"
luminance = "0.41.0"
luminance-derive = "0.6.1"
luminance-front = "0.2.3"
luminance-web-sys = "0.1.1"
luminance-webgl = "0.1.2"
luminance-windowing = "0.9.1"
wasm-bindgen = "0.2.67"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "console",
  "AddEventListenerOptions",
  "Document",
  "Element",
  "EventTarget",
  "HtmlElement",
  "KeyboardEvent",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
