[package]
name = "all-is-cubes-content"
version = "0.9.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Demo/default game content for the all-is-cubes engine."
# TODO: add homepage = "..." when we have one
repository.workspace = true
license = "MIT OR Apache-2.0"
categories = ["games"]
keywords = ["all-is-cubes"]

[package.metadata.docs.rs]
features = ["arbitrary"]

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[[bench]]
name = "gen"
harness = false

[features]
# Adds `UniverseTemplate::Random`.
arbitrary = ["dep:arbitrary", "all-is-cubes/arbitrary"]

[dependencies]
# std feature is required because this library does not yet participate in `maybe_sync`.
all-is-cubes = { workspace = true, features = ["std"] }
all-is-cubes-ui = { workspace = true }
arbitrary = { workspace = true, optional = true }
exhaust = { workspace = true }
futures-core = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
macro_rules_attribute = { workspace = true }
noise = { workspace = true } # TODO: not no_std compatible (fixable)
paste = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
strum = { workspace = true, features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true, features = ["async_futures"] }
pretty_assertions = { workspace = true }
# Using tokio for async test-running.
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
