[package]
name = "all-is-cubes-desktop"
version = "0.6.0"
authors = ["Kevin Reid <kpreid@switchb.org>"]
edition = "2021"
rust-version = "1.65"
# TODO: better description
description = "Recursive voxel game."
# TODO: add homepage = "..." when we have one
repository = "https://github.com/kpreid/all-is-cubes"
license = "MIT OR Apache-2.0"
# TODO: revisit categories once it's more settled what's in this package
categories = ["games", "rendering"]
exclude = ["*.app", "*.desktop"]

[package.metadata.docs.rs]
features = []

[[bin]]
name = "all-is-cubes"
path = "src/main.rs"
doc = false # Do not overwrite library crate's documentation
bench = false

[features]
rerun = ["dep:re_sdk", "all-is-cubes/rerun"]

[dependencies]
all-is-cubes = { path = "../all-is-cubes", version = "0.6.0", features = ["save", "threads"] }
all-is-cubes-content = { path = "../all-is-cubes-content", version = "0.6.0" }
all-is-cubes-gpu = { path = "../all-is-cubes-gpu", version = "0.6.0", features = ["threads", "wgpu"] }
all-is-cubes-mesh = { path = "../all-is-cubes-mesh", version = "0.6.0" }
all-is-cubes-port = { path = "../all-is-cubes-port", version = "0.6.0" }
all-is-cubes-ui = { path = "../all-is-cubes-ui", version = "0.6.0" }
anyhow = { workspace = true }
bytemuck = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true }
# Note: keep crossterm in sync with ratatui's crossterm dependency.
crossterm = "0.27.0"
directories-next = "2.0.0"
indicatif = { version = "0.17.0", default-features = false }
kira = { version = "0.8.3", default-features = false, features = ["cpal"] }
log = { workspace = true }
once_cell = { workspace = true }
png = "0.17.6"
rand = { workspace = true, features = ["std", "std_rng"] }
# re_sdk is a data-logging and visualization tool; we are currently using it _only_ for
# development of All is Cubes itself.
re_sdk = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplelog = { workspace = true }
strum = { workspace = true, features = ["derive", "std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
ratatui = { version = "0.24.0", default-features = false, features = ["crossterm"] }
unicode-width = { version = "0.1.9", default-features = false }
# Note on feature selection: winit requires either "x11" or "wayland" to build at all on Linux, which is harmless elsewhere. I picked x11 because it should be the most compatible.
# TODO: drop rwh_05 when wgpu is updated
winit = { version = "0.29.2", default-features = false, features = ["x11", "rwh_05"] }
# Enable the log_hiccups feature
yield-progress = { workspace = true, features = ["log_hiccups"] }

[dev-dependencies]
gltf = "1.4.0" # for round-trip test; must match version of gltf-json
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
trycmd = { workspace = true }

[lints]
workspace = true
