[package]
name = "all-is-cubes-desktop"
version = "0.8.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
# TODO: better description
description = "Recursive voxel game."
# TODO: add homepage = "..." when we have one
repository.workspace = true
license = "MIT OR Apache-2.0"
# TODO: revisit categories once it's more settled what's in this package
categories = ["games", "rendering"]
keywords = ["all-is-cubes"]
exclude = ["*.app", "*.desktop"]

[package.metadata.docs.rs]
features = []

[lib]
bench = false

[[bin]]
name = "all-is-cubes"
doc = false # Do not overwrite library crate's documentation just because of the same crate name
bench = false

[features]
rerun = ["dep:re_sdk", "all-is-cubes/rerun", "all-is-cubes-gpu/rerun"]

[dependencies]
all-is-cubes = { workspace = true, features = ["auto-threads", "save"] }
all-is-cubes-content = { workspace = true }
all-is-cubes-gpu = { workspace = true, features = ["auto-threads", "wgpu"] }
all-is-cubes-mesh = { workspace = true }
all-is-cubes-port = { workspace = true }
all-is-cubes-render = { workspace = true, features = ["raytracer"] }
all-is-cubes-ui = { workspace = true }
anyhow = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true }
directories-next = "2.0.0"
futures-core = { workspace = true }
gilrs = { workspace = true }
indicatif = { version = "0.17.0", default-features = false }
itertools = { workspace = true }
kira = { version = "0.9.4", default-features = false, features = ["cpal"] }
log = { workspace = true }
png = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }
# re_sdk is a data-logging and visualization tool; we are currently using it _only_ for
# development of All is Cubes itself.
re_sdk = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplelog = { workspace = true }
strum = { workspace = true, features = ["derive", "std"] }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
ratatui = { version = "0.28.0", default-features = false, features = ["crossterm"] }
unicode-width = { workspace = true }
# We have no true direct dependency on wgpu, but do need to select backends.
# (As of wgpu 0.19, Vulkan is implicitly enabled on Linux.)
wgpu = { workspace = true, features = ["dx12", "metal"] }
# Note on feature selection: winit requires either "x11" or "wayland" to build at all on Linux, which is harmless elsewhere. I picked x11 because it should be the most compatible.
winit = { version = "0.30.0", default-features = false, features = ["x11", "rwh_06"] }
# Enable the log_hiccups feature
yield-progress = { workspace = true, features = ["log_hiccups"] }

[dev-dependencies]
gltf = "1.4.0" # for round-trip test; must match version of gltf-json
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
trycmd = { workspace = true }

[lints]
workspace = true
