[package]
name = "all-is-cubes-mesh"
version = "0.7.0"
authors = ["Kevin Reid <kpreid@switchb.org>"]
edition = "2021"
rust-version = "1.73"
description = "Mesh generation for the all-is-cubes engine."
# TODO: add homepage = "..." when we have one
repository = "https://github.com/kpreid/all-is-cubes"
license = "MIT OR Apache-2.0"
categories = ["games", "graphics", "rendering"]

[package.metadata.docs.rs]
features = []

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false
# Disable doctest running to reduce total noise in `cargo test` output.
# Doctests are so slow, and not well applicable here, so we don't currently have any.
doctest = false

[[bench]]
name = "mesh_bench"
harness = false

[features]
default = []
# Adds support for mesh generation performance logging to Rerun.
rerun = ["all-is-cubes/rerun"]
# Adds `impl arbitrary::Arbitrary for ...`
arbitrary = ["dep:arbitrary", "all-is-cubes/arbitrary", "ordered-float/arbitrary"]

[dependencies]
all-is-cubes = { workspace = true }
arbitrary = { workspace = true, optional = true }
bitflags = { workspace = true }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
bytemuck = { workspace = true }
either = { workspace = true }
flume = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
fnv = "1.0.7"
indoc = { workspace = true }
log = { workspace = true }
mutants = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
