[package]
name = "all-is-cubes-mesh"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Mesh generation for the all-is-cubes engine."
# TODO: add homepage = "..." when we have one
repository.workspace = true
license = "MIT OR Apache-2.0"
categories = ["games", "graphics", "rendering"]

[package.metadata.docs.rs]
features = []

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false
# Disable doctest running to reduce total noise in `cargo test` output.
# Doctests are so slow, and not well applicable here, so we don't currently have any.
doctest = false

[[bench]]
name = "mesh"
harness = false

[[example]]
name = "visualize-block-mesh"
required-features = ["rerun"]

[features]
default = []
# Adds support for mesh generation performance logging to Rerun.
rerun = ["all-is-cubes/rerun"]
# Adds `impl arbitrary::Arbitrary for ...`
arbitrary = ["dep:arbitrary", "all-is-cubes/arbitrary", "ordered-float/arbitrary"]
# Adds automatic parallelism to some algorithms (but not all possible uses of concurrency).
# If disabled, `std::thread` is never used.
# If enabled, threads may be created and the active `rayon` thread pool may be used.
auto-threads = ["dep:rayon"]


[dependencies]
all-is-cubes = { workspace = true }
arbitrary = { workspace = true, optional = true }
bitvec = { workspace = true }
bytemuck = { workspace = true }
cfg-if = { workspace = true }
either = { workspace = true }
flume = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
fnv = "1.0.7"
indoc = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
mutants = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
# used for visualize-block-mesh example
all-is-cubes-content = { workspace = true }
pollster = { workspace = true }
criterion = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
