[package]
name = "all-is-cubes-mesh"
version = "0.9.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Blocky voxel mesh generation for the all-is-cubes engine. Adaptable to arbitrary vertex formats."
# TODO: add homepage = "..." when we have one
repository.workspace = true
license = "MIT OR Apache-2.0"
categories = ["games", "graphics", "rendering"]
keywords = ["all-is-cubes", "voxel", "mesh"]

[package.metadata.docs.rs]
features = ["_full-documentation", "arbitrary", "dynamic"]

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false
# Disable doctest running (we have none) to reduce total noise in `cargo test` output.
doctest = false

[features]
default = []
# Updating meshes as their data sources change. Requires std.
dynamic = [
    "dep:flume",
    "dep:futures-channel",
    "dep:futures-util",
    "dep:hashbrown",
    "dep:log",
]
# Adds support for mesh generation performance logging to Rerun.
rerun = ["all-is-cubes/rerun"]
# Adds `impl arbitrary::Arbitrary for ...`
arbitrary = ["dep:arbitrary", "all-is-cubes/arbitrary", "ordered-float/arbitrary"]
# Adds automatic parallelism to some algorithms (but not all possible uses of concurrency).
# If disabled, `std::thread` is never used.
# If enabled, threads may be created and the active `rayon` thread pool may be used.
auto-threads = ["dep:rayon"]
# Internal use only. Used to ensure that docs.rs builds have complete information;
# in particular, `all-is-cubes/std` would otherwise be missing, making types appear `!Sync`.
_full-documentation = ["all-is-cubes/std", "arbitrary"]
# Makes certain internal items public.
# This feature is intended only for use when developing All is Cubes,
# to compile certain fuzzing, benchmark, and example targets.
# It is not necessary to enable this feature to run the complete `cargo test` test suite.
_special_testing = ["dep:visibility"]


[dependencies]
all-is-cubes = { workspace = true }
all-is-cubes-render = { workspace = true }
arbitrary = { workspace = true, optional = true }
bitvec = { workspace = true }
bytemuck = { workspace = true }
cfg-if = { workspace = true }
either = { workspace = true }
exhaust = { workspace = true }
flume = { workspace = true, optional = true }
futures-channel = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true }
indoc = { workspace = true }
itertools = { workspace = true }
log = { workspace = true, optional = true }
mutants = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }
rayon = { workspace = true, optional = true }
smallvec = { workspace = true }
visibility = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
