[package]
name = "all-is-cubes-port"
version = "0.5.0"
authors = ["Kevin Reid <kpreid@switchb.org>"]
edition = "2021"
rust-version = "1.65"
description = "Data import/export for the all-is-cubes engine."
# TODO: add homepage = "..." when we have one
repository = "https://github.com/kpreid/all-is-cubes"
license = "MIT OR Apache-2.0"
categories = ["games", "rendering::data-formats"]

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[features]

[dependencies]
all-is-cubes = { path = "../all-is-cubes", version = "0.5.0" }
all-is-cubes-mesh = { path = "../all-is-cubes-mesh", version = "0.5.0" }
dot_vox = { version = "5.1.1" }
futures-core = { workspace = true }
itertools = { workspace = true }
# TODO: replace logging with explicit reporting data flow
log = { workspace = true }
once_cell = { workspace = true }
stl_io = { version = "0.7.0" }
thiserror = { workspace = true }
# json is used for native and glTF
serde_json = { workspace = true }

# glTF related dependencies
base64 = "0.21.0" # data URL generation
bytemuck = { workspace = true, features = ["derive"] }
gltf-json = { version = "1.1.0", default-features = false, features = ["names", "KHR_materials_volume", "KHR_materials_transmission"] }

[dev-dependencies]
assert_fs = "1.0.12"
either = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
# for async tests
tokio = { workspace = true, features = ["macros", "rt"] }
