[package]
name = "all-is-cubes-port"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Data import/export for the all-is-cubes engine."
# TODO: add homepage = "..." when we have one
repository.workspace = true
license = "MIT OR Apache-2.0"
categories = ["games", "rendering::data-formats"]

[package.metadata.docs.rs]
features = []

[lib]
# Disable running as benchmark so that the default doesn't interfere with Criterion usage.
bench = false

[features]
# TODO: Add features to make each format optional so that single-purpose importers or exporters are possible.

[dependencies]
all-is-cubes = { workspace = true, features = ["save"] }
all-is-cubes-mesh = { workspace = true }
all-is-cubes-render = { workspace = true }
dot_vox = { version = "5.1.1" }
futures-core = { workspace = true }
# Used to write glTF textures
image = { workspace = true, features = ["png"] }
itertools = { workspace = true }
# TODO: replace logging with explicit reporting data flow
log = { workspace = true }
rectangle-pack = { workspace = true }
stl_io = { version = "0.7.0" }
# json is used for native and glTF
serde_json = { workspace = true }
thiserror = { workspace = true }

# glTF related dependencies
base64 = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
# gltf-json often has semver-incompatible changes, so pin it
gltf-json = { version = ">=1.4.1, <1.5.0", default-features = false, features = ["names", "KHR_materials_volume", "KHR_materials_transmission"] }

[dev-dependencies]
all-is-cubes-render = { workspace = true, features = ["raytracer"] }
snapbox = { workspace = true, features = ["path"] }
either = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
# for async tests
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
